--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vue/component-compiler-utils": "^3.2.0",
-    "parcel-bundler": "^1.12.4",
-    "vue-template-compiler": "^2.6.12"
+    "@vue/component-compiler-utils": "3.2.0",
+    "parcel-bundler": "1.12.4",
+    "vue-hot-reload-api": "2.3.4",
+    "vue-template-compiler": "2.6.12"
   },
   "dependencies": {
-    "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.4",
-    "vue-router": "^3.4.9"
+    "jszip": "3.5.0",
+    "mustache": "4.1.0",
+    "vue": "2.6.12",
+    "vue-router": "3.4.9"
   }
 }
