Show skin data when building skin

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "less": "4.1.0",
     "mustache": "4.1.0",
     "vue": "2.6.12",
+    "vue-json-viewer": "2.2.18",
     "vue-router": "3.4.9"
   }
 }
