--- a/package.json
+++ b/package.json
@@ -6,28 +6,32 @@
   "scripts": {
     "deploy": "parcel build index.html --out-dir /var/www/html/",
     "start": "parcel index.html",
-    "lint": "npx eslint src/**/*.js",
-    "test": "npm run lint"
+    "lint": "npx eslint src/**/*.js tests/**/*.js",
+    "test": "npm run lint && jest --testRegex tests/*.test.js --coverage"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "7.14.8",
+    "@babel/plugin-transform-modules-commonjs": "7.14.5",
+    "@babel/preset-env": "7.13.8",
     "@vue/component-compiler-utils": "3.2.0",
-    "parcel-bundler": "1.12.4",
+    "@vue/test-utils": "1.2.2",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "27.0.6",
+    "eslint": "7.31.0",
+    "eslint-config-wikimedia": "0.20.0",
+    "jest": "27.0.6",
+    "parcel-bundler": "1.12.3",
     "vue-hot-reload-api": "2.3.4",
+    "vue-jest": "3.0.7",
     "vue-template-compiler": "2.6.12"
   },
   "dependencies": {
-    "@vue/test-utils": "^1.2.2",
-    "eslint": "^7.31.0",
-    "eslint-config-wikimedia": "^0.20.0",
-    "jest": "^27.0.6",
     "jszip": "3.5.0",
     "less": "4.1.0",
     "mustache": "4.1.0",
     "vue": "2.6.12",
-    "vue-jest": "^3.0.7",
     "vue-json-viewer": "2.2.18",
     "vue-router": "3.4.9"
   }
