--- a/.eslintignore
+++ b/.eslintignore
@@ -4,8 +4,5 @@ package-lock.json
 /dist
 /node_modules/*
 # External dependencies
-/src/starter-template/bundle.js
-/src/starter-template/export/FileSaver.js
-/src/starter-template/package.json
-/src/starter-template/package-lock.json
+/src/starter-template/**
 /starter-template/node_modules/*
