Drop starter template test

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"deploy": "parcel build index.html --out-dir /var/www/html/",
 		"start": "parcel index.html",
 		"lint": "eslint . && stylelint **/*.less",
-		"test": "npm run lint && jest --testRegex tests/*.test.js --coverage && npm run test-starter-template"
+		"test": "npm run lint && jest --testRegex tests/*.test.js --coverage"
 	},
 	"author": "",
 	"license": "ISC",
