--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"deploy": "npm run cache && parcel build index.html --out-dir /var/www/html/ && cp -R data /var/www/html",
-		"cache": "@babel/node buildApiResponses.js",
+		"cache": "babel-node buildApiResponses.mjs",
 		"start": "parcel index.html",
 		"lint": "eslint . && stylelint **/*.less",
 		"test": "npm run lint && jest --testRegex tests/*.test.js --coverage"
