--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        node-version: [14.17.5]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
