--- a/package.json
+++ b/package.json
@@ -2,44 +2,42 @@
 	"name": "skins.wmflabs.org",
 	"version": "1.0.0",
 	"description": "A place to find mediawiki skins",
-	"main": "index.js",
 	"scripts": {
-		"deploy": "npm run cache && parcel build index.html --out-dir /var/www/html/ && cp -R data /var/www/html",
-		"cache": "mkdir -p data && babel-node buildApiResponses.mjs",
+		"deploy": "npm run cache && parcel build index.html --dist-dir /var/www/html/ && cp -R data /var/www/html",
+		"cache": "mkdir -p data && babel-node buildApiResponses.mjs --presets @babel/preset-env",
 		"start": "parcel index.html",
 		"lint": "eslint . && stylelint **/*.less",
 		"test": "npm run lint && jest --testRegex tests/*.test.js --coverage"
 	},
 	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@babel/core": "7.14.8",
-		"@babel/plugin-transform-modules-commonjs": "7.14.5",
-		"@babel/preset-env": "7.13.8",
-		"@vue/component-compiler-utils": "3.2.0",
-		"@vue/test-utils": "1.2.2",
-		"babel-core": "7.0.0-bridge.0",
-		"babel-jest": "27.0.6",
-		"eslint": "7.31.0",
-		"eslint-config-wikimedia": "0.20.0",
-		"jest": "27.0.6",
-		"parcel-bundler": "1.12.3",
-		"stylelint": "13.13.1",
-		"stylelint-config-wikimedia": "0.11.1",
-		"vue-hot-reload-api": "2.3.4",
-		"vue-jest": "3.0.7",
-		"vue-template-compiler": "2.6.12"
-	},
 	"dependencies": {
-		"@babel/cli": "7.19.3",
-		"@babel/node": "7.18.10",
-		"@wikimedia/codex-design-tokens": "1.13.0",
-		"less": "4.1.0",
+		"@wikimedia/codex": "1.14.0",
 		"mediawiki-skins-cli": "1.43.0",
-		"mustache": "4.1.0",
+		"mustache": "4.2.0",
+		"vue": "3.4.27",
+		"vue-json-viewer": "3.0.4",
+		"vue-router": "4.4.5"
+	},
+	"devDependencies": {
+		"@babel/cli": "7.25.9",
+		"@babel/core": "7.26.0",
+		"@babel/node": "7.26.0",
+		"@babel/preset-env": "7.26.0",
+		"@parcel/transformer-less": "2.12.0",
+		"@parcel/transformer-vue": "2.12.0",
+		"@vue/vue3-jest": "27.0.0-alpha.4",
+		"@wikimedia/codex-design-tokens": "1.14.0",
+		"buffer": "6.0.3",
+		"eslint-config-wikimedia": "0.28.2",
+		"events": "^3.3.0",
+		"jest": "27.0.6",
+		"jest-environment-jsdom": "^27.0.6",
+		"less": "4.1.0",
 		"node-fetch": "3.2.10",
-		"vue": "2.6.12",
-		"vue-json-viewer": "2.2.18",
-		"vue-router": "3.4.9"
+		"parcel": "2.12.0",
+		"process": "^0.11.10",
+		"stream-browserify": "^3.0.0",
+		"stylelint-config-wikimedia": "0.17.2",
+		"vue3-jest": "27.0.0-alpha.1"
 	}
 }
